# zlab

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
examples/: CMakeLists.txt  linearLeastSquares_demo.cpp  ode_demo.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.hpp  numeric_types.cpp  numeric_types.hpp
src/math/: CMakeLists.txt  math.hpp  matrix.cpp  matrix.hpp  matrix_decomposition.cpp  matrix_decomposition.hpp  ode.cpp  ode.hpp  rbf.cpp  rbf.hpp  solvers.cpp  solvers.hpp  utilities.hpp
test/: CMakeLists.txt  math_test.cpp  matrix_test.cpp  my_tests.cpp  ode_test.cpp  rbf_test.cpp  solvers_test.cpp  zmatrix_test.cpp
